--- a/style.css
+++ b/style.css
@@ -507,3 +507,31 @@ input[type="button"]:hover,.btn1:hover,.Airbtn1:hover,.Partnerbtn1:hover{
     padding: 20px 30px;
     border-radius: 50px;
 }
+
+.footer{
+    /* width: 100%; */
+    height: 400px;
+    border-top: 3px solid red;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+
+}
+.footer_div{
+    width: 25%;
+    /* border: 1px solid red; */
+    padding-top: 100px;
+}
+.footer_div_heading{
+    width: 100%;
+    color: red;
+    letter-spacing: 1px;
+    font-size: 30px;
+}
+.footer_div_para{
+    width: 100%;
+    color:#383737;
+    letter-spacing: 1px;
+    font-size: larger;
+        
+}
